<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="copy_complete">复制完成！</string>
    <string name="share">分享</string>
    <string name="debug">调试</string>
    <string name="edit_code">编辑代码</string>
    <string name="run_code">运行代码</string>
    <string name="layout_tv_last">上一个</string>
    <string name="layout_tv_next">下一个</string>
    <string name="layout_tv_replace">替换</string>
    <string name="layout_tv_replaceAll">全部替换</string>
    <string name="code_run">运行结果</string>
    <string name="change_editor_theme">更改主题</string>
    <string name="editor_theme_darcula" translatable="false">Darcula</string>
    <string name="editor_theme_eclipse" translatable="false">Eclipse</string>
    <string name="editor_theme_github" translatable="false">Github</string>
    <string name="editor_theme_notepadxx" translatable="false">Notepad++</string>
    <string name="editor_theme_vs2019" translatable="false">VS2019</string>
    <string name="open_file">打开文件</string>
    <string name="undo">撤销</string>
    <string name="redo">重做</string>
    <string name="set_debug_arguments">设置参数</string>
    <string name="open_plugin_document">查看教程</string>
    <string name="format_code">格式化</string>
    <string name="change_debug_args">设置参数</string>
    <string name="trans_text">翻译文本</string>
    <string name="source_language">源语言</string>
    <string name="target_language">目标语言</string>
    <string name="close">关闭</string>
    <string name="export_plugin">导出为插件</string>
    <string name="export_plugin_error">解析插件时出错，请确保您的插件可以正常执行！</string>
    <string name="export_plugin_success">导出成功！</string>
    <string name="message_open_while_not_saved">您确定要打开文件吗？当前操作尚未保存……</string>
    <string name="message_hint">提示</string>
    <string name="message_leave_not_saved">当前文件尚未保存，您确定要离开吗？</string>
</resources>