<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_code_editor_debug"
        android:icon="@drawable/ic_debug"
        android:title="@string/debug"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_code_editor_theme"
        android:title="@string/change_editor_theme"
        app:showAsAction="never"
        >

        <menu>
            <group
                android:checkableBehavior="single"
                >
                <item android:id="@+id/menu_code_editor_theme_darcula"
                    android:title="@string/editor_theme_darcula"
                    app:showAsAction="withText"/>
                <item android:id="@+id/menu_code_editor_theme_eclipse"
                    android:title="@string/editor_theme_eclipse"
                    app:showAsAction="withText"/>
                <item android:id="@+id/menu_code_editor_theme_github"
                    android:title="@string/editor_theme_github"
                    app:showAsAction="withText"/>
                <item android:id="@+id/menu_code_editor_theme_notepadxx"
                    android:title="@string/editor_theme_notepadxx"
                    app:showAsAction="withText"/>
                <item android:id="@+id/menu_code_editor_theme_vs2019"
                    android:title="@string/editor_theme_vs2019"
                    app:showAsAction="withText"/>
            </group>
        </menu>
    </item>

</menu>